--- a/arkui/ace_ets_web_error_code/entry/src/main/resources/rawfile/webstorage.html
+++ b/arkui/ace_ets_web_error_code/entry/src/main/resources/rawfile/webstorage.html
@@ -17,7 +17,8 @@
 
          db.transaction(function (tx) {
             tx.executeSql('SELECT * FROM LOGS', [], function (tx, results) {
-               var len = results.rows.length, i;
+               let len = results.rows.length; 
+               let i;
                msg = "<p>查询记录条数: " + len + "</p>";
                document.querySelector('#status').innerHTML +=  msg;
 					
