--- a/arkui/ace_ets_web_error_code/entry/src/main/resources/rawfile/webstorage.html
+++ b/arkui/ace_ets_web_error_code/entry/src/main/resources/rawfile/webstorage.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8">	
       <script type="text/javascript">
 		
-         var db = openDatabase('mydb', '1.0', 'Test DB', 2 * 1024 * 1024);
-         var msg;
+         let db = openDatabase('mydb', '1.0', 'Test DB', 2 * 1024 * 1024);
+         let msg;
 			
          db.transaction(function (tx) {
             tx.executeSql('CREATE TABLE IF NOT EXISTS LOGS (id unique, log)');
